2009-04-26 Dietmar Warning
 * devices/cktinit.c: prototype load_alldevs not needed
 * ngspice.h: float.h before defines.h, some more function mapping in _MSC_VER section

2009-04-26 Dietmar Warning
 * measure.c, inpcom.c: winmessage only for windows
 * misc/util.c, tilde.c, math/poly/ployfit.c: relay to ngspice.h
 * main.c, tclspice.c, misc/mktemp.c, misc/string.c: don't need include string.h because
   it comes from central place ngspice.h

2009-04-26 Holger Vogt
 * xpressn.c:400 Suppress message "cannot redefine"

2009-04-25 Holger Vogt
 * configure.in, visualc/include/config.h: NGSPICEDATADIR set to $dprefix/share/ngspice

2009-04-23 Holger Vogt
 * measure.c, inpcom.c, : winmessage() header added

============================ Rework-19 ==================================
2009-04-23 Holger Vogt
 * measure.c: .measure broken for trig, targ

2009-04-22 Holger Vogt
 * bsim4v2init.c, bsim4v3init.c: CIDER added
   
2009-04-22 Holger Vogt
 * inpcom.c measure.c mystring.c alloc.c: show Windows error 
   message before exiting

2009-04-21 Dietmar Warning
 * devices/bsim4/*.c, /vbic/*.c: Parameter declaration in function header
 
2009-04-20 Holger Vogt
 * src/spice.def: for creating dll
 * src/makefile.am: libs for tclspice MINGW added
 * configure.in: automatically select building shared or static libraries
 * tclspice.c: some additions for MS Visual 2008

2009-04-18 Dietmar Warning
 * devices/bsim3soi/*.c, *.h, tests/bsim3soi/*.cir, *.out, *.mod, DEVICES: 
   Update to actual version 4.1, contrary to the comment in Berkeley doc's the model
   is not full downward compatibel to version 4.0
 * spicelib/parser/inpgmod.c, 251: using strcmp again, instead of strstr - 
   we need absolute equality to distinguish between node and model names.

2009-04-18 Holger Vogt
 * INSTALL: chapter 1.5 added (separate object file directory tree)

2009-04-17 Holger Vogt
 * resource.c: 27 allow compilation into a build directory

2009-04-14 Holger Vogt