@@ -16,13 +16,18 @@ static int spice3_gmin (CKTcircuit *, long int, long int, int);
 static int gillespie_src (CKTcircuit *, long int, long int, int);
 static int spice3_src (CKTcircuit *, long int, long int, int);
 
+#ifdef HAS_WINDOWS
+void SetAnalyse( char * Analyse, int Percent);
+#endif
 
 int
 CKTop (CKTcircuit * ckt, long int firstmode, long int continuemode,
        int iterlim)
 {
   int converged;
-
+#ifdef HAS_WINDOWS
+        SetAnalyse("op", 0);
+#endif
 ckt->CKTmode = firstmode;
 
   if (!ckt->CKTnoOpIter){
