@@ -1,3 +1,7 @@
+2009-04-26 Holger Vogt
+ * winmain.c, inp.c, cktop.c: SetAnalyse() modified/added
+   cktdojob.c: maxord set to minimum 2 (prevent crash in dctran.c:774) 
+
 2009-04-26 Dietmar Warning
  * devices/cktinit.c: prototype load_alldevs not needed
  * ngspice.h: float.h before defines.h, some more function mapping in _MSC_VER section
